# mongo-processor

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  config.ini.sample  dump.py  main.py  pyproject.toml
.github/workflows/: README.md  build-latest.yml
k8s/: ConfigMap.yaml  Job.yaml  PersistentVolumeClaim.yaml  app.yaml
src/: base.py  compare_data.py  dump.py  index.py  main.py  manager.py  rebuild_indexes.py  restore.py
