[project]
name = "mongo-processor"
version = "0.1.0"
description = "A MongoDB data migration tool for exporting and importing databases between different MongoDB instances"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymongo==3.13.0",
]

[project.scripts]
mongo-processor = "main:main"

[project.urls]
Homepage = "https://github.com/izerui/mongo-processor"
Repository = "https://github.com/izerui/mongo-processor"
Issues = "https://github.com/izerui/mongo-processor/issues"

[dependency-groups]
dev = []
